--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,10 @@ material = "1.12.0"
 jetbrainsKotlinJvm = "1.9.0"
 hiltVersion = "2.51.1"
 navigationCompose = "2.7.7"
+ksp = "1.9.0-1.0.13"
+roomRuntime = "2.6.1"
+runtimeLivedata = "1.6.5"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -35,9 +39,16 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 
 dagger-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion"}
 dagger-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltVersion"}
+
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
+androidx-room-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "runtimeLivedata" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 dagger-hilt-android = {id = "com.google.dagger.hilt.android", version.ref = "hiltVersion"}
+devtoolsKsp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
